# 402csad

./: CMakeLists.txt  README.md  checker.py  ci,bat  ci.bat
.github/workflows/: ci.yml
ci/: google_sheets_export.txt  script.txt
csad-task1-feature-aspt/ci/: google_sheets_export.txt  script.txt
input/: 402.csv
output/: 402.csv
tests/: unit_tests.cpp
